@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.8.2" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.8.3" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -16,9 +16,14 @@
 - New utils module
 - Updated user agent strings
 - Updated m3u8 modules
+- Various fixes &amp; tweaks for Kodi 19
 
 [B]2.7.X[/B]
 - New cache functions (taken from ResolveURL and adapted)
 - Various other tweaks</news>
+        <assets>
+            <icon>icon.png</icon>
+            <fanart>fanart.jpg</fanart>
+        </assets>
     </extension>
 </addon>
